[project]
name = "learned-fall-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "mcap>=1.2.2",
    "msgpack>=1.1.0",
    "nbformat>=5.10.4",
    "parquet>=1.3.1",
    "plotly>=6.0.1",
    "polars>=1.26.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
]
